--- a/Hacettepe.Web/Views/Shared/_Layout.cshtml
+++ b/Hacettepe.Web/Views/Shared/_Layout.cshtml
@@ -267,20 +267,20 @@
   </footer>
   <!-- End Footer -->
   <span class="cs_scrollup"><i class="fa-solid fa-arrow-up"></i></span>
-
-<script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/odometer.js"></script>
-<script src="js/isotope.pkg.min.js"></script>
-<script src="js/lightgallery.min.js"></script>
-<script src="js/jquery.timepicker.min.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/select2.min.js"></script>
-<script src="js/ripples.min.js"></script>
-<script src="js/gsap.min.js"></script>
-<script src="js/animated-headline.js"></script>
-<script src="js/main.js"></script>
-@await RenderSectionAsync("Scripts", required: false)
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/odometer.js"></script>
+  <script src="js/isotope.pkg.min.js"></script>
+  <script src="js/lightgallery.min.js"></script>
+  <script src="js/jquery.timepicker.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/select2.min.js"></script>
+  <script src="js/ripples.min.js"></script>
+  <script src="js/gsap.min.js"></script>
+  <script src="js/animated-headline.js"></script>
+  <script src="js/main.js"></script>
+  @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
