--- a/Hacettepe.Web/Views/Home/Index.cshtml
+++ b/Hacettepe.Web/Views/Home/Index.cshtml
@@ -1,26 +1,62 @@
-﻿<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item">
-      <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide [800x400]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_18ebe8e7b97%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_18ebe8e7b97%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.91796875%22%20y%3D%22218.45%22%3EFirst%20slide%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
-    </div>
-    <div class="carousel-item active">
-      <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [800x400]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_18ebe8e7b97%20text%20%7B%20fill%3A%23444%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_18ebe8e7b97%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23666%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22247.3125%22%20y%3D%22218.45%22%3ESecond%20slide%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+﻿<style>
+   .carousel-container img{
+      min-height: 580px;
+  }
+</style>
+
+<section class="cs_hero">
+  <div class="cs_hero_wrap">
+    <div class="container">
+      <div class="carousel-container">
+        <img src="img/photo_1023_1.png" class='img-fluid w-100'/>
+        <img src="img/photo_1028_1.png" class='img-fluid w-100'/>
+      </div>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Önceki</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Sonraki</span>
-  </a>
-</div>
+</section>
+<div class="cs_height_65"></div>
+<div class="container">
+        <div class="cs_section_heading cs_style_1 text-center">
+          <h3 class="cs_section_subtitle text-uppercase cs_accent_color cs_semibold m-0 cs_accent_color cs_fs_32">Hızlı Erişim</h3>
+          <div class="cs_height_5"></div>
+          <h2 class="cs_section_title cs_fs_72 m-0"></h2>
+        </div>
+        <div class="cs_height_72 cs_height_lg_50"></div>
+        <div class="row">
+          <div class="col-xl-3 col-md-6">
+            <a href="department-details.html" class="cs_iconbox cs_style_2">
+              <div class="cs_iconbox_icon">
+                <img src="img/contact/icon_1.svg" alt="Icon">            
+              </div>
+              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Randevu Alın</h2>
+            </a>
+          </div>
+          <div class="col-xl-3 col-md-6">
+            <a href="department-details.html" class="cs_iconbox cs_style_2">
+              <div class="cs_iconbox_icon">
+                <img src="img/icons/ambulance.svg" alt="Icon">                               
+              </div>
+              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Test Sonuçları</h2>
+            </a>
+          </div>
+          <div class="col-xl-3 col-md-6">
+            <a href="department-details.html" class="cs_iconbox cs_style_2">
+              <div class="cs_iconbox_icon">
+                <img src="img/icons/pin.svg" alt="Icon">  
+              </div>
+              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Ulaşım</h2>
+            </a>
+          </div>
+          <div class="col-xl-3 col-md-6">
+            <a href="department-details.html" class="cs_iconbox cs_style_2">
+              <div class="cs_iconbox_icon">
+                <img src="img/icons/pin.svg" alt="Icon">  
+              </div>
+              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Online İşlemler</h2>
+            </a>
+          </div>
+        </div>
+      </div>
 <div class="cs_height_65"></div>
 <div class="container">
     <div class="row">
@@ -99,49 +135,6 @@
         </div>
     </div>
 </div>
-<div class="cs_height_65"></div>
-<div class="container">
-        <div class="cs_section_heading cs_style_1 text-center">
-          <h3 class="cs_section_subtitle text-uppercase cs_accent_color cs_semibold m-0 cs_accent_color cs_fs_32">Hızlı Erişim</h3>
-          <div class="cs_height_5"></div>
-          <h2 class="cs_section_title cs_fs_72 m-0"></h2>
-        </div>
-        <div class="cs_height_72 cs_height_lg_50"></div>
-        <div class="row">
-          <div class="col-xl-3 col-md-6">
-            <a href="department-details.html" class="cs_iconbox cs_style_2">
-              <div class="cs_iconbox_icon">
-                <img src="img/contact/icon_1.svg" alt="Icon">            
-              </div>
-              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Randevu Alın</h2>
-            </a>
-          </div>
-          <div class="col-xl-3 col-md-6">
-            <a href="department-details.html" class="cs_iconbox cs_style_2">
-              <div class="cs_iconbox_icon">
-                <img src="img/icons/ambulance.svg" alt="Icon">                               
-              </div>
-              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Test Sonuçları</h2>
-            </a>
-          </div>
-          <div class="col-xl-3 col-md-6">
-            <a href="department-details.html" class="cs_iconbox cs_style_2">
-              <div class="cs_iconbox_icon">
-                <img src="img/icons/pin.svg" alt="Icon">  
-              </div>
-              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Ulaşım</h2>
-            </a>
-          </div>
-          <div class="col-xl-3 col-md-6">
-            <a href="department-details.html" class="cs_iconbox cs_style_2">
-              <div class="cs_iconbox_icon">
-                <img src="img/icons/pin.svg" alt="Icon">  
-              </div>
-              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Online İşlemler</h2>
-            </a>
-          </div>
-        </div>
-      </div>
 <div class="cs_height_65"></div>
 <div class="container">
     <div class="cs_section_heading cs_style_1 text-center">
@@ -256,4 +249,17 @@
           </div>
         </div>
       </div>
-
+@section Scripts {
+  <script type="text/javascript">
+    $(".carousel-container").slick({
+      autoplay: true,
+      arrows: false,
+      slidesToShow: 1,
+      slidesToScroll: 1,
+      speed: 350,
+      autoplaySpeed: 2000,
+      infinite: true,
+      dots: true
+    });
+  </script>
+}
