Hızlı erişim alanı görsel düzenlemeler
Hızlı Erişim h3 başlığı kaldırıldı ve box'lar ile slider arasındaki boşluk azaltıldı. 

Randevu alın dışındaki 3 icon da hover olmadan görünmüyordu. Ayrıca online işlemler randevu alın yanına 2. sıraya alındı.

--- a/Hacettepe.Web/Views/Home/Index.cshtml
+++ b/Hacettepe.Web/Views/Home/Index.cshtml
@@ -17,14 +17,13 @@
 <div class="cs_height_65"></div>
 <div class="container">
         <div class="cs_section_heading cs_style_1 text-center">
-          <h3 class="cs_section_subtitle text-uppercase cs_accent_color cs_semibold m-0 cs_accent_color cs_fs_32">Hızlı Erişim</h3>
+          @* <h3 class="cs_section_subtitle text-uppercase cs_accent_color cs_semibold m-0 cs_accent_color cs_fs_32">Hızlı Erişim</h3> *@
           <div class="cs_height_5"></div>
-          <h2 class="cs_section_title cs_fs_72 m-0"></h2>
         </div>
-        <div class="cs_height_72 cs_height_lg_50"></div>
+        @* <div class="cs_height_72 cs_height_lg_50"></div> *@
         <div class="row">
           <div class="col-xl-3 col-md-6">
-            <a href="department-details.html" class="cs_iconbox cs_style_2">
+            <a href="https://hastanerandevu.hacettepe.edu.tr/nucleus-hastaportal-randevu/public/main?user=PUBLIC" class="cs_iconbox cs_style_2">
               <div class="cs_iconbox_icon">
                 <img src="img/contact/icon_1.svg" alt="Icon">            
               </div>
@@ -32,7 +31,15 @@
             </a>
           </div>
           <div class="col-xl-3 col-md-6">
-            <a href="department-details.html" class="cs_iconbox cs_style_2">
+            <a href="https://www.hastane.hacettepe.edu.tr/online-islemler_35.html" class="cs_iconbox cs_style_2">
+              <div class="cs_iconbox_icon">
+                <img src="img\icons\tick.svg" alt="Icon">  
+              </div>
+              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Online İşlemler</h2>
+            </a>
+          </div>
+          <div class="col-xl-3 col-md-6">
+            <a href="https://sonuc.hacettepe.edu.tr:20843/nucleus-hastaportal-sonuc/public/main?user=PUBLIC" class="cs_iconbox cs_style_2">
               <div class="cs_iconbox_icon">
                 <img src="img/icons/ambulance.svg" alt="Icon">                               
               </div>
@@ -40,21 +47,14 @@
             </a>
           </div>
           <div class="col-xl-3 col-md-6">
-            <a href="department-details.html" class="cs_iconbox cs_style_2">
+            <a href="#" class="cs_iconbox cs_style_2">
               <div class="cs_iconbox_icon">
-                <img src="img/icons/pin.svg" alt="Icon">  
+                <img src="img/contact/icon_3.svg" alt="Icon">  
               </div>
               <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Ulaşım</h2>
             </a>
           </div>
-          <div class="col-xl-3 col-md-6">
-            <a href="department-details.html" class="cs_iconbox cs_style_2">
-              <div class="cs_iconbox_icon">
-                <img src="img/icons/pin.svg" alt="Icon">  
-              </div>
-              <h2 class="cs_iconbox_title cs_fs_32 cs_semibold m-0">Online İşlemler</h2>
-            </a>
-          </div>
+          
         </div>
       </div>
 <div class="cs_height_65"></div>
