Responsive slider commit

--- a/Hacettepe.Web/Views/Home/Index.cshtml
+++ b/Hacettepe.Web/Views/Home/Index.cshtml
@@ -1,15 +1,11 @@
-﻿<style>
-   .carousel-container img{
-      min-height: 580px;
-  }
-</style>
-
-<section class="cs_hero">
+﻿<section class="cs_hero">
   <div class="cs_hero_wrap">
     <div class="container">
       <div class="carousel-container">
-        <img src="img/photo_1023_1.png" class='img-fluid w-100'/>
-        <img src="img/photo_1028_1.png" class='img-fluid w-100'/>
+        <img src="img/photo_1023_1.png" class='d-block w-100'/>
+        <img src="img/photo_1028_1.png" class='d-block w-100'/>
+        <img src="img/photo_1021_1.jpg" class='d-block w-100'/>
+        <img src="img/photo_861_2.jpg" class='d-block w-100'/>
       </div>
     </div>
   </div>
