html and routing changes

--- a/Hacettepe.Web/Views/Shared/_Layout.cshtml
+++ b/Hacettepe.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
         <div class="cs_main_header_in">
           <div class="cs_main_header_left">
             <a class="cs_site_branding" href="/">
-              <img src="img/logo.svg" alt="Logo">
+              <img src="/img/logo.svg" alt="Logo">
               <div class="logo_yazi">
                 <div class="banner_uni">HACETTEPE ÜNİVERSİTESİ</div>
                 <div class="banner_uni_bolum">HASTANELERİ</div>
@@ -99,9 +99,9 @@
   <div class="cs_sidenav">
     <div class="cs_sidenav_overlay"></div>
     <div class="cs_sidenav_in">
-      <button class="cs_close" type="button"><img src="img/icons/close.svg" alt="Close"></button>
+      <button class="cs_close" type="button"><img src="/img/icons/close.svg" alt="Close"></button>
       <div class="cs_logo_box">
-        <img src="img/logo.svg" alt="Logo">
+        <img src="/img/logo.svg" alt="Logo">
         <div class="cs_height_15"></div>
         <div class="brand_name"> 
           <div class="cs_fs_24 cs_semibold mb-0">HACETTEPE ÜNİVERSİTESİ</div>
@@ -113,7 +113,7 @@
       <div class="cs_height_70 cs_height_lg_50"></div>
       <div class="cs_iconbox cs_style_11 cs_radius_25">
         <div class="cs_iconbox_icon">
-          <img src="img/contact/icon_1.svg" alt="Icon">
+          <img src="/img/contact/icon_1.svg" alt="Icon">
         </div>
         <div class="cs_iconbox_right">
           <h3 class="cs_iconbox_title cs_fs_24 mb-0">Telefon</h3>
@@ -123,7 +123,7 @@
       <div class="cs_height_30"></div>
       <div class="cs_iconbox cs_style_11 cs_radius_25">
         <div class="cs_iconbox_icon">
-          <img src="img/contact/icon_2.svg" alt="Icon">
+          <img src="/img/contact/icon_2.svg" alt="Icon">
         </div>
         <div class="cs_iconbox_right">
           <h3 class="cs_iconbox_title cs_fs_24 mb-0">E-Posta</h3>
@@ -133,7 +133,7 @@
       <div class="cs_height_30"></div>
       <div class="cs_iconbox cs_style_11 cs_radius_25">
         <div class="cs_iconbox_icon">
-          <img src="img/contact/icon_3.svg" alt="Icon">
+          <img src="/img/contact/icon_3.svg" alt="Icon">
         </div>
         <div class="cs_iconbox_right">
           <h3 class="cs_iconbox_title cs_fs_24 mb-0">Adres</h3>
@@ -236,8 +236,8 @@
                   <button class="cs_btn cs_style_1">
                     <span>Submit</span>
                     <i>
-                      <img src="img/icons/arrow_white.svg" alt="Icon">
-                      <img src="img/icons/arrow_white.svg" alt="Icon">
+                      <img src="/img/icons/arrow_white.svg" alt="Icon">
+                      <img src="/img/icons/arrow_white.svg" alt="Icon">
                     </i>
                   </button>
                 </form>
@@ -267,20 +267,20 @@
   </footer>
   <!-- End Footer -->
   <span class="cs_scrollup"><i class="fa-solid fa-arrow-up"></i></span>
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/wow.min.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/odometer.js"></script>
-  <script src="js/isotope.pkg.min.js"></script>
-  <script src="js/lightgallery.min.js"></script>
-  <script src="js/jquery.timepicker.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/select2.min.js"></script>
-  <script src="js/ripples.min.js"></script>
-  <script src="js/gsap.min.js"></script>
-  <script src="js/animated-headline.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-3.6.0.min.js"></script>
+  <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/wow.min.js"></script>
+  <script src="/js/slick.min.js"></script>
+  <script src="/js/odometer.js"></script>
+  <script src="/js/isotope.pkg.min.js"></script>
+  <script src="/js/lightgallery.min.js"></script>
+  <script src="/js/jquery.timepicker.min.js"></script>
+  <script src="/js/jquery-ui.js"></script>
+  <script src="/js/select2.min.js"></script>
+  <script src="/js/ripples.min.js"></script>
+  <script src="/js/gsap.min.js"></script>
+  <script src="/js/animated-headline.js"></script>
+  <script src="/js/main.js"></script>
   @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
