--- a/Hacettepe.Web/Areas/Admin/Views/Pages/Edit.cshtml
+++ b/Hacettepe.Web/Areas/Admin/Views/Pages/Edit.cshtml
@@ -1,13 +1,15 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model Hacettepe.Application.Pages.CreatePageRequest
+@model Hacettepe.Domain.Page
 
 @{
     ViewBag.Title = "title";
     Layout = "_Layout";
+    var title = Model.Id == 0 ? "Yeni Sayfa Oluşturma" : "Sayfa Güncelleme";
 }
-<h2 class="cs_fs_40 cs_medium mb-0">Yeni Sayfa Oluşturma</h2>
+<h2 class="cs_fs_40 cs_medium mb-0">@title</h2>
 <div class="row">
-  <form method="POST" asp-formhelper="true" asp-area="Admin" asp-action="Create" asp-controller="Pages" class="needs-validation" autocomplete="off">
+  <form method="POST" asp-formhelper="true" asp-area="Admin" asp-action="Save" asp-controller="Pages" class="needs-validation" autocomplete="off">
+    @Html.HiddenFor(model=>model.Id)
     <div class="col-lg-12">
       <label class="cs_input_label cs_heading_color">Sayfa Başlığı</label>
       <input id="title" type="text" class="form-control" asp-for="Title" value="@Model.Title" required autofocus>
@@ -20,7 +22,7 @@
     </div>
     <div class="col-lg-12">
       <label class="cs_input_label cs_heading_color">Sayfa İçeriği</label>
-      <textarea asp-for="Content" id="editor" class="form-control rounded-lg w-full h-full"  placeholder="Sayfa içerği"></textarea>
+      <textarea asp-for="Content_TR" id="editor" class="form-control rounded-lg w-full h-full"  placeholder="Sayfa içerği"></textarea>
       <span class="invalid-feedback" asp-validation-for="Slug"></span>
     </div>
     <div class="col-lg-12">
@@ -28,8 +30,8 @@
       <button class="cs_btn cs_style_1">
         <span>Kaydet</span>
         <i>
-          <img src="assets/img/icons/arrow_white.svg" alt="Icon">
-          <img src="assets/img/icons/arrow_white.svg" alt="Icon">
+          <img src="/assets/img/icons/arrow_white.svg" alt="Icon">
+          <img src="/assets/img/icons/arrow_white.svg" alt="Icon">
         </i>
       </button>
     </div>
@@ -37,7 +39,12 @@
 </div>
 
 @section Scripts {
-  tinymce.init({
-  selector: 'textarea#editor',
-  });
+  <script>
+    tinymce.init({
+      selector: '#editor',
+            plugins: 'code table lists link image',
+            toolbar: 'undo redo | formatselect | bold italic | alignleft aligncenter alignright | bullist numlist outdent indent | link image | code',
+            menubar: 'file edit view insert format tools table'
+    });
+  </script>
 }
