--- a/Hacettepe.Web/Views/Shared/_Layout.cshtml
+++ b/Hacettepe.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+  var user = ViewContext.HttpContext.User;  
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
