Düzeltmeler ve doktorlar

--- a/Hacettepe.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Hacettepe.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -61,193 +61,216 @@
 <body class="layout-fixed sidebar-expand-lg bg-body-tertiary">
 <!--begin::App Wrapper-->
 <div class="app-wrapper">
-    <!--begin::Header-->
-    <nav class="app-header navbar navbar-expand bg-body">
-        <!--begin::Container-->
-        <div class="container-fluid">
-            <!--begin::Start Navbar Links-->
-            <ul class="navbar-nav">
+<!--begin::Header-->
+<nav class="app-header navbar navbar-expand bg-body">
+    <!--begin::Container-->
+    <div class="container-fluid">
+        <!--begin::Start Navbar Links-->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" data-lte-toggle="sidebar" href="#" role="button">
+                    <i class="bi bi-list"></i>
+                </a>
+            </li>
+        </ul> <!--end::Start Navbar Links-->
+        <ul class="navbar-nav ms-auto">
+            <!--begin::Navbar Search-->
+            <!--begin::Fullscreen Toggle-->
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-lte-toggle="fullscreen">
+                    <i data-lte-icon="maximize" class="bi bi-arrows-fullscreen"></i> <i data-lte-icon="minimize" class="bi bi-fullscreen-exit" style="display: none;"></i>
+                </a>
+            </li> <!--end::Fullscreen Toggle--> <!--begin::User Menu Dropdown-->
+            <li class="nav-item dropdown user-menu">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                    <span class="d-none d-md-inline">@userName</span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
+                    <!--begin::User Image-->
+                    <!--begin::Menu Footer-->
+                    <li class="user-footer">
+                        <a href="#" class="btn btn-default btn-flat float-end">Çıkış</a>
+                    </li> <!--end::Menu Footer-->
+                </ul>
+            </li> <!--end::User Menu Dropdown-->
+        </ul> <!--end::End Navbar Links-->
+        <!--begin::End Navbar Links-->
+    </div>
+</nav>
+
+<aside class="app-sidebar bg-body-secondary shadow" data-bs-theme="dark">
+    <!--begin::Sidebar Brand-->
+    <div class="sidebar-brand">
+        <!--begin::Brand Link-->
+        <a href="/" class="brand-link">
+            <!--begin::Brand Image-->
+            <img src="/img/logo.svg" alt="AdminLTE Logo" class="brand-image opacity-75 shadow"> <!--end::Brand Image--> <!--begin::Brand Text-->
+            <span class="brand-text text-wrap text-center fs-6 fw-light">Hacettepe Üniversitesi Hastaneleri</span> <!--end::Brand Text-->
+        </a> <!--end::Brand Link-->
+    </div> <!--end::Sidebar Brand--> <!--begin::Sidebar Wrapper-->
+    <div class="sidebar-wrapper">
+        <nav class="mt-2">
+            <!--begin::Sidebar Menu-->
+            <ul class="nav sidebar-menu flex-column" data-lte-toggle="treeview" role="menu" data-accordion="false">
+                <li class="nav-item menu-open">
+                    <a href="#" class="nav-link active">
+                        <i class="nav-icon bi bi-speedometer"></i>
+                        <p>
+                            Kullanıcı İşlemleri
+                            <i class="nav-arrow bi bi-chevron-right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/admin/users/list" class="nav-link active">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>Kullanıcı Listesi</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/admin/users/create" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>Kullanıcı Ekleme</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-lte-toggle="sidebar" href="#" role="button">
-                        <i class="bi bi-list"></i>
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon bi bi-box-seam-fill"></i>
+                        <p>
+                            İçerikler
+                            <i class="nav-arrow bi bi-chevron-right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/admin/pages/list" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>İçerik Listesi</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/admin/pages/create" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>İçerik Oluşturma</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon bi bi-box-seam-fill"></i>
+                        <p>
+                            Haber/Duyurular
+                            <i class="nav-arrow bi bi-chevron-right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/admin/news/list" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>Haber/Duyuru Listesi</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/admin/news/create" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>Yeni Haber/Duyuru</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon bi bi-box-seam-fill"></i>
+                        <p>
+                            Menü
+                            <i class="nav-arrow bi bi-chevron-right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/admin/menuitems/list" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>Menü Listesi</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/admin/menuitems/create" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>Yeni Menü Oluştur</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon bi bi-box-seam-fill"></i>
+                        <p>
+                            Doktorlar
+                            <i class="nav-arrow bi bi-chevron-right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/admin/doctors/list" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>Doktor Listesi</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/admin/doctors/create" class="nav-link">
+                                <i class="nav-icon bi bi-circle"></i>
+                                <p>Yeni Doktor Oluştur</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="/admin/audits/list" class="nav-link">
+                        <i class="nav-icon bi bi-box-seam-fill"></i>
+                        <p>
+                            Denetim Günlükleri
+                            <i class="nav-arrow bi bi-chevron-right"></i>
+                        </p>
                     </a>
                 </li>
-            </ul> <!--end::Start Navbar Links-->
-            <ul class="navbar-nav ms-auto">
-                <!--begin::Navbar Search-->
-                <!--begin::Fullscreen Toggle-->
-                <li class="nav-item">
-                    <a class="nav-link" href="#" data-lte-toggle="fullscreen">
-                        <i data-lte-icon="maximize" class="bi bi-arrows-fullscreen"></i> <i data-lte-icon="minimize" class="bi bi-fullscreen-exit" style="display: none;"></i>
-                    </a>
-                </li> <!--end::Fullscreen Toggle--> <!--begin::User Menu Dropdown-->
-                <li class="nav-item dropdown user-menu">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                        <span class="d-none d-md-inline">@userName</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
-                        <!--begin::User Image-->
-                        <!--begin::Menu Footer-->
-                        <li class="user-footer">
-                            <a href="#" class="btn btn-default btn-flat float-end">Çıkış</a>
-                        </li> <!--end::Menu Footer-->
-                    </ul>
-                </li> <!--end::User Menu Dropdown-->
-            </ul> <!--end::End Navbar Links-->
-            <!--begin::End Navbar Links-->
+            </ul>
+        </nav>
+    </div>
+</aside>
+<main class="app-main">
+    <!--begin::App Content Header-->
+    <div class="app-content-header">
+        <!--begin::Container-->
+        <div class="container-fluid">
+            <!--begin::Row-->
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3 class="mb-0">@ViewBag.Title</h3>
+                </div>
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-end">
+                        <li class="breadcrumb-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page">
+                            @ViewBag.Title
+                        </li>
+                    </ol>
+                </div>
+            </div> <!--end::Row-->
+        </div> <!--end::Container-->
+    </div> <!--end::App Content Header--> <!--begin::App Content-->
+    <div class="app-content">
+        <!--begin::Container-->
+        <div class="container-fluid">
+            <!--begin::Row-->
+            @RenderBody()
         </div>
-    </nav>
-
-    <aside class="app-sidebar bg-body-secondary shadow" data-bs-theme="dark">
-        <!--begin::Sidebar Brand-->
-        <div class="sidebar-brand">
-            <!--begin::Brand Link-->
-            <a href="/" class="brand-link">
-                <!--begin::Brand Image-->
-                <img src="/img/logo.svg" alt="AdminLTE Logo" class="brand-image opacity-75 shadow"> <!--end::Brand Image--> <!--begin::Brand Text-->
-                <span class="brand-text text-wrap text-center fs-6 fw-light">Hacettepe Üniversitesi Hastaneleri</span> <!--end::Brand Text-->
-            </a> <!--end::Brand Link-->
-        </div> <!--end::Sidebar Brand--> <!--begin::Sidebar Wrapper-->
-        <div class="sidebar-wrapper">
-            <nav class="mt-2">
-                <!--begin::Sidebar Menu-->
-                <ul class="nav sidebar-menu flex-column" data-lte-toggle="treeview" role="menu" data-accordion="false">
-                    <li class="nav-item menu-open">
-                        <a href="#" class="nav-link active">
-                            <i class="nav-icon bi bi-speedometer"></i>
-                            <p>
-                                Kullanıcı İşlemleri
-                                <i class="nav-arrow bi bi-chevron-right"></i>
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="/admin/users/list" class="nav-link active">
-                                    <i class="nav-icon bi bi-circle"></i>
-                                    <p>Kullanıcı Listesi</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="/admin/users/create" class="nav-link">
-                                    <i class="nav-icon bi bi-circle"></i>
-                                    <p>Kullanıcı Ekleme</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="nav-icon bi bi-box-seam-fill"></i>
-                            <p>
-                                İçerikler
-                                <i class="nav-arrow bi bi-chevron-right"></i>
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="/admin/pages/list" class="nav-link">
-                                    <i class="nav-icon bi bi-circle"></i>
-                                    <p>İçerik Listesi</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="/admin/pages/create" class="nav-link">
-                                    <i class="nav-icon bi bi-circle"></i>
-                                    <p>İçerik Oluşturma</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="nav-icon bi bi-box-seam-fill"></i>
-                            <p>
-                                Haber/Duyurular
-                                <i class="nav-arrow bi bi-chevron-right"></i>
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="/admin/news/list" class="nav-link">
-                                    <i class="nav-icon bi bi-circle"></i>
-                                    <p>Haber/Duyuru Listesi</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="/admin/news/create" class="nav-link">
-                                    <i class="nav-icon bi bi-circle"></i>
-                                    <p>Yeni Haber/Duyuru</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="nav-icon bi bi-box-seam-fill"></i>
-                            <p>
-                                Menü
-                                <i class="nav-arrow bi bi-chevron-right"></i>
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="/admin/menuitems/list" class="nav-link">
-                                    <i class="nav-icon bi bi-circle"></i>
-                                    <p>Menü Listesi</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="/admin/menuitems/create" class="nav-link">
-                                    <i class="nav-icon bi bi-circle"></i>
-                                    <p>Yeni Menü Oluştur</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/admin/audits/list" class="nav-link">
-                            <i class="nav-icon bi bi-box-seam-fill"></i>
-                            <p>
-                                Denetim Günlükleri
-                                <i class="nav-arrow bi bi-chevron-right"></i>
-                            </p>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </aside>
-    <main class="app-main">
-        <!--begin::App Content Header-->
-        <div class="app-content-header">
-            <!--begin::Container-->
-            <div class="container-fluid">
-                <!--begin::Row-->
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h3 class="mb-0">@ViewBag.Title</h3>
-                    </div>
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-end">
-                            <li class="breadcrumb-item">
-                                <a href="#">Home</a>
-                            </li>
-                            <li class="breadcrumb-item active" aria-current="page">
-                                @ViewBag.Title
-                            </li>
-                        </ol>
-                    </div>
-                </div> <!--end::Row-->
-            </div> <!--end::Container-->
-        </div> <!--end::App Content Header--> <!--begin::App Content-->
-        <div class="app-content">
-            <!--begin::Container-->
-            <div class="container-fluid">
-                <!--begin::Row-->
-                @RenderBody()
-            </div>
-        </div>
-    </main>
+    </div>
+</main>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/overlayscrollbars@2.3.0/browser/overlayscrollbars.browser.es6.min.js" integrity="sha256-H2VM7BKda+v2Z4+DRy69uknwxjyDRhszjXFhsL4gD3w=" crossorigin="anonymous"></script> <!--end::Third Party Plugin(OverlayScrollbars)--><!--begin::Required Plugin(popperjs for Bootstrap 5)-->
 <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha256-whL0tQWoY1Ku1iskqPFvmZ+CHsvmRWx/PIoEvIeWh4I=" crossorigin="anonymous"></script> <!--end::Required Plugin(popperjs for Bootstrap 5)--><!--begin::Required Plugin(Bootstrap 5)-->
