--- a/Hacettepe.Web/Areas/Admin/Views/Audits/List.cshtml
+++ b/Hacettepe.Web/Areas/Admin/Views/Audits/List.cshtml
@@ -26,6 +26,9 @@
     <script type="text/javascript">
     
         $('#auditsGrid').dataTable({
+           "language" : {
+               url: 'https://cdn.datatables.net/plug-ins/2.1.3/i18n/tr.json',
+           },
             "processing": true,
             "serverSide": true,
             "filter": true, // this is for disable filter (search box)
