--- a/Hacettepe.Web/Areas/Admin/Views/Doctors/List.cshtml
+++ b/Hacettepe.Web/Areas/Admin/Views/Doctors/List.cshtml
@@ -31,7 +31,10 @@
     
     <script type="text/javascript">
     
-        $('#doctorsGrid').dataTable({
+        var table = $('#doctorsGrid').dataTable({
+            "language" : {
+                url: 'https://cdn.datatables.net/plug-ins/2.1.3/i18n/tr.json',
+            },
             "processing": true,
             "serverSide": true,
             "filter": true, // this is for disable filter (search box)
