--- a/Hacettepe.Web/Areas/Admin/Views/Users/List.cshtml
+++ b/Hacettepe.Web/Areas/Admin/Views/Users/List.cshtml
@@ -25,6 +25,9 @@
     <script type="text/javascript">
     
         $('#usersGrid').dataTable({
+            "language" : {
+                url: 'https://cdn.datatables.net/plug-ins/2.1.3/i18n/tr.json',
+            },
             "processing": true,
             "serverSide": true,
             "filter": true, // this is for disable filter (search box)
