--- a/Hacettepe.Web/Areas/Admin/Views/News/Edit.cshtml
+++ b/Hacettepe.Web/Areas/Admin/Views/News/Edit.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
+@using System.Net
 @model Hacettepe.Domain.News
 
 @{
@@ -9,35 +10,28 @@
 <div class="row">
     <form method="POST" asp-formhelper="true" asp-area="Admin" asp-action="Save" asp-controller="Users" autocomplete="off">
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Content)
         <div class="mb-3">
-            <label for="title_tr" class="form-label">Türkçe Başlık</label>
-            <input id="title_tr" type="text" class="form-control" asp-for="Title_Tr" value="@Model.Title_Tr" autofocus>
-            <span class="invalid-feedback" asp-validation-for="Title_Tr"></span>
+            <label for="news_title" class="form-label">Başlık</label>
+            <input id="news_title" type="text" class="form-control" asp-for="Title" value="@Model.Title" autofocus>
+            <span class="invalid-feedback" asp-validation-for="Title"></span>
         </div>
         <div class="mb-3">
-            <label for="title_en" class="form-label">İngilizce Başlık</label>
-            <input id="title_en" type="text" class="form-control" asp-for="Title_En" value="@Model.Title_En">
-            <span class="invalid-feedback" asp-validation-for="Title_En"></span>
+            <label for="news_brief" class="form-label">Özet</label>
+            <input id="news_brief" type="text" class="form-control" asp-for="Brief" value="@Model.Brief">
+            <span class="invalid-feedback" asp-validation-for="Brief"></span>
         </div>
         <div class="mb-3">
-            <label for="brief_Tr" class="form-label">Türkçe Özet</label>
-            <input id="brief_Tr" type="text" class="form-control" asp-for="Brief_Tr" value="@Model.Brief_En">
-            <span class="invalid-feedback" asp-validation-for="Title_Tr"></span>
+            <label for="news_language" class="form-label">Dil İçerik</label>
+            <select id="news_language" type="text" class="form-control" asp-for="Language" value="@Model.Language">
+                <option value="0">Türkçe</option>
+                <option value="1">İngilizce</option>
+            </select>
+            <span class="invalid-feedback" asp-validation-for="Language"></span>
         </div>
         <div class="mb-3">
-            <label for="brief_en" class="form-label">İngilizce Özet</label>
-            <input id="brief_en" type="text" class="form-control" asp-for="Brief_Tr" value="@Model.Brief_En">
-            <span class="invalid-feedback" asp-validation-for="Brief_En"></span>
-        </div>
-        <div class="mb-3">
-            <label for="fullTemplateId_Tr" class="form-label">Türkçe İçerik</label>
-            <select id="fullTemplateId_Tr" type="text" class="form-control" asp-for="FullTemplateId_Tr" value="@Model.FullTemplateId_Tr"></select>
-            <span class="invalid-feedback" asp-validation-for="FullTemplateId_Tr"></span>
-        </div>
-        <div class="mb-3">
-            <label for="fullTemplateId_En" class="form-label">İngilizce İçerik</label>
-            <select id="fullTemplateId_En" type="text" class="form-control" asp-for="FullTemplateId_En" value="@Model.FullTemplateId_En"></select>
-            <span class="invalid-feedback" asp-validation-for="Brief_En"></span>
+            <label for="gjs" class="form-label">İçerik</label>
+            <div id="gjs"></div>
         </div>
         <div class="col-lg-12">
             <div class="cs_height_18"></div>
@@ -47,3 +41,5 @@
         </div>
     </form>
 </div>
+
+@Html.RenderPartialAsync("_Editor")
